Atualização vídeo responsivo

--- a/Site-CC/dupla-titulacao/dupla-titulacao/index.html
+++ b/Site-CC/dupla-titulacao/dupla-titulacao/index.html
@@ -73,8 +73,11 @@
             <div id=”dupla_titulacao”>
                 <h1>Dupla Titulação</h1>
                 <h4>Conheça um pouco do programa:</h4>
-                <div class="img-section">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/UwFOeKAldVQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/UwFOeKAldVQ"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen> </iframe>
                 </div>
                 <p>
                     O curso de Ciência da Computação assinou recentemente 3 acordos de Dupla Titulação com instituições
@@ -174,9 +177,9 @@
                 <ul>
                     <li>
                         <h6>Classificação e Condições</h5>
-                        <p>O auxílio financeiro está condicionado à disponibilidade orçamentária do IFSC.</p>
-                        <p>O auxílio financeiro somente será pago por meio de depósito bancário em conta-corrente de
-                            titularidade do discente (não são aceitas contas de bancos digitais).</p>
+                            <p>O auxílio financeiro está condicionado à disponibilidade orçamentária do IFSC.</p>
+                            <p>O auxílio financeiro somente será pago por meio de depósito bancário em conta-corrente de
+                                titularidade do discente (não são aceitas contas de bancos digitais).</p>
                     </li>
                     <li>
                         <h6>Montante e Distribuição</h6>
